prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_table_to_string.nut
// EXPECTED: compile-time error - table assigned to string
local x: string = { a = 1 }
return x
